Rewrite most of the UI to use the file model
This is still incomplete.